tests/files/error/func_call_not_enough_args.boat
def f(a,b):
    a
end

f(1)